--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "update-deps": "npm update",
     "postupdate-deps": "bower update",
 
-    // "prestart": "npm install",
+    "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
 
     "pretest": "npm install",
